--- a/inc/css/main.css
+++ b/inc/css/main.css
@@ -248,7 +248,7 @@ ul#centerLinks li.connect a:hover span {
 }
 
 
-#content .settingsPage input {
+#content .sub input {
     width: 270px;
     height: 40px;
     background: #16171B;
@@ -261,17 +261,22 @@ ul#centerLinks li.connect a:hover span {
             transition: all 0.2s;
 }
 
-#content .settingsPage input[type="submit"] {
+#content .sub input[type="submit"] {
     width: 300px;
     background: #1890D3;
     cursor: pointer;
     border-bottom: 3px solid #116A9B;
 }
 
-#content .settingsPage input[type="submit"]:hover {
+#content .sub input[type="submit"]:hover {
     border-bottom: 1px solid #116A9B;
 }
 
-#content .settingsPage input:focus {
-
+#content .addCommandPage {
+    width: 300px;
+    height: 480px;
+    margin: -240px 0 0 -150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
